Melhorias de qualidade (PMD, Checkstyle etc.)