@@ -6,9 +6,7 @@ import lombok.Data;
 import lombok.NoArgsConstructor;
 import sgc.subprocesso.model.Subprocesso;
 
-/**
- * DTO para retornar sugestões apresentadas ao mapa (CDU-20 item 5).
- */
+/** DTO para retornar sugestões apresentadas ao mapa (CDU-20 item 5). */
 @Data
 @Builder
 @NoArgsConstructor
@@ -16,20 +14,24 @@ import sgc.subprocesso.model.Subprocesso;
 public class SugestoesDto {
     /** O texto das sugestões. */
     private String sugestoes;
+
     /** Indica se foram apresentadas sugestões. */
     private boolean sugestoesApresentadas;
+
     /** O nome da unidade que apresentou as sugestões. */
     private String unidadeNome;
 
     public static SugestoesDto of(Subprocesso subprocesso) {
-        String sugestoes = subprocesso.getMapa() != null ? subprocesso.getMapa().getSugestoes() : null;
-        boolean sugestoesApresentadas = sugestoes != null && !sugestoes.trim().isEmpty();
-        String nomeUnidade = subprocesso.getUnidade() != null ? subprocesso.getUnidade().getNome() : null;
+        String sugestoes =
+                subprocesso.getMapa() != null ? subprocesso.getMapa().getSugestoes() : null;
+        boolean sugestoesApresentadas = sugestoes != null && !sugestoes.isBlank();
+        String nomeUnidade =
+                subprocesso.getUnidade() != null ? subprocesso.getUnidade().getNome() : null;
 
         return SugestoesDto.builder()
-            .sugestoes(sugestoes)
-            .sugestoesApresentadas(sugestoesApresentadas)
-            .unidadeNome(nomeUnidade)
-            .build();
+                .sugestoes(sugestoes)
+                .sugestoesApresentadas(sugestoesApresentadas)
+                .unidadeNome(nomeUnidade)
+                .build();
     }
 }
